cia-part-2-complete

--- a/exercises/index.html
+++ b/exercises/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <div class="most-parent">
-    <h1>CIA realizes its been using black highlighers all these years</h1>
-    <h2>Director Demands Investigation</h2>
+
+    <h1 class="header title">CIA realizes its been using black highlighers all these years</h1>
+    <h2 class="header">Director Demands Investigation</h2>
     <img src="cia-dude.png" alt="">
     <p>LANGLEY, VA_A report released Tuesday by the CIA's Office of the Inspector General revealed that the CIA has mistakenly obscured hundreds of thousands of pages of crititcal intelligence information with the black highlighers. </p>
       <br />
