--- a/exercises/flags/sweden.html
+++ b/exercises/flags/sweden.html
@@ -14,4 +14,13 @@
   </div>
   
 </body>
+<script>
+const sel = document.querySelector('#cross');
+console.dir(sel)
+
+  sel.textContent = "blahblahblahbl"
+
+  const button = sel.onclick()
+
+</script>
 </html>
