--- a/exercises/flags/tounga.html
+++ b/exercises/flags/tounga.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="sweden.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sweden</title>
+  <link rel="stylesheet" href="tonga.css">
+  <title>Document</title>
 </head>
 <body>
-  <h1>Sweden</h1>
-  <div class="container">l
-    <div id="cross"></div>
+
+  <h1>Tonga</h1>
+
+  <div class="container">
+    <div class="corner">
+      <div id="cross"></div>
+    </div>
   </div>
   
 </body>
-
-
 </html>
