--- a/exercises/calculator/calc.html
+++ b/exercises/calculator/calc.html
@@ -9,10 +9,10 @@
 </head>
 <body>
  <h1>choose the first number</h1>
-  <input type="text" class="first">
-  <select name="operator" id="operator"></select>
+  <input type="number" class="first">
+  <select id="operator"></select>
 <h1>choose the second number</h1>
-  <input type="text" class="second">
+  <input type="number" class="second">
   <button id='submit'>submit</button>
   
 
