--- a/exercises/flags/greece.html
+++ b/exercises/flags/greece.html
@@ -8,11 +8,20 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>Greece</h1>
   <div class="container">
-    <div class="stripes"></div>
     <div class="corner">
       <div id="cross"></div>
     </div>
+    <div class="stripes"></div>
+    <div class="white-stripe"></div>
+    <div class="stripes-2"></div>
+    <div class="crs-white"></div>
+    <div class="white-stripe-2"></div>
+    <div class="first-long-stripe"></div>
+    <div class="sec-long-stripe"></div>
+    <div class="thir-long-stripe"></div>
+    <div class="four-long-stripe"></div>
   </div>
   
 </body>
