add travel form

--- a/exercises/businessTime/businessTime.html
+++ b/exercises/businessTime/businessTime.html
@@ -34,6 +34,7 @@
           </div>
         <div class="card"> 
             <h1>travel to custom destination</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ut numquam dolore, fugit sequi voluptatum.</p>
           </div>
           
   </div>
