add escape room

--- a/exercises/travelForm/travel.html
+++ b/exercises/travelForm/travel.html
@@ -37,11 +37,13 @@
     <br />
 
     <select id='daPlaces' name="place"></select> <br />
-    <input type='checkbox' name='lactose' value='lactose free' >lactose free<br />
 
-    <input type="checkbox" name="kosher" value="kosher">kosher<br>
 
-<input type="checkbox" name="veg" value="vegitarian">vegitarian<br>
+    <input type='checkbox' name='diet' value='lactose free' >lactose free<br />
+
+    <input type="checkbox" name="diet" value="kosher">kosher<br>
+
+<input type="checkbox" name="diet" value="vegitarian">vegitarian<br>
 
     <button>Submit</button>
   </form>
