--- a/JSON/pokemon.html
+++ b/JSON/pokemon.html
@@ -6,8 +6,33 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+<style> 
+
+.container {
+  display: flex;
+  flex-flow: column;
+  flex-wrap: wrap;
+
+}
+.card {
+  display: grid;
+  grid-auto-flow: column;
+
+  border: 2px solid black;
+  height: 200px;
+  width: 200px;
+
+}
+</style>
 <body>
-  <div id="content"></div>
+
+  <div class="container">
+
+    <div id="content">
+    </div>
+    
+  </div>
+  
   <script src="pokemon.js"></script>
 </body>
 </html>
