image upload complete

--- a/axiosTODO/index.html
+++ b/axiosTODO/index.html
@@ -16,7 +16,8 @@
     
       <h2>description</h2>
       <input type="text" name="description">
-      
+      <h2>image </h2>
+      <input type="text" name="image">
     <button>Submit new</button>
   </form>
 
