--- a/axiosTODO/index.html
+++ b/axiosTODO/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Vanilla Todos</title>
   <script src=' https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js'></script>
 </head>
 <body>
@@ -22,7 +22,6 @@
         <input type="text" name="image">
         <button>Submit new</button>
       </form>
-      <div class="todo-list"></div>
   </div>
   <script src='app.js'></script>
 </body>
